// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Arc > renders correct with background color is given 1`] = `
<g>
  <g>
    <path
      d="M100,50 A50,50 0 0 1 50,100L50,95 A45,45 0 0 0 95,50 L100,50"
      style="fill: red;"
    />
  </g>
  <g>
    <path
      d="M50,0 A50,50 0 0 1 100,50L95,50 A45,45 0 0 0 50,5 L50,0"
      style="fill: lime;"
    />
  </g>
</g>
`;

exports[`Arc > renders correct without background color is given 1`] = `
<g>
  <g>
    <path
      d="M50,0 A50,50 0 0 1 100,50L95,50 A45,45 0 0 0 50,5 L50,0"
      style="fill: lime;"
    />
  </g>
</g>
`;
